sql/grammar/sql_parser.go
// Licensed to LinDB under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. LinDB licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

// Code generated from ./sql/grammar/SQLParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // SQLParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLParser struct {
	*antlr.BaseParser
}

var SQLParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlparserParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "'ALL'", "'APP'", "'ALIVE'", "'AND'", "'ANALYZE'", "'AS'",
		"'ASC'", "'BETWEEN'", "'BEGIN'", "'BROKER'", "'BROKERS'", "'BY'", "'COMPACT'",
		"'CREATE'", "'CROSS'", "'COLUMNS'", "'DATABASE'", "'DATABASES'", "'DEFAULT'",
		"'DESC'", "'DISTRIBUTED'", "'DROP'", "'END'", "'ENGINE'", "'ESCAPE'",
		"'EXPLAIN'", "'EXISTS'", "'FALSE'", "'FIELDS'", "'FLUSH'", "'FROM'",
		"'GROUP'", "'HAVING'", "'IF'", "'IN'", "'INSERT'", "'INTO'", "'INTERVAL'",
		"'IS'", "'JOB'", "'JOIN'", "'KEYS'", "'LEFT'", "'LIKE'", "'LIMIT'",
		"'LOG'", "'LOGICAL'", "'MASTER'", "'MEMORY_DATABASES'", "'METRICS'",
		"'METRIC'", "'METADATA'", "'METADATAS'", "'NAMESPACE'", "'NAMESPACES'",
		"'NULL'", "'NOT'", "'NOW'", "'ON'", "'OR'", "'ORDER'", "'REQUESTS'",
		"'REPLICATIONS'", "'RIGHT'", "'ROLLUP'", "'SELECT'", "'SINK'", "'SHOW'",
		"'STATE'", "'STORAGE'", "'STREAMING'", "'OBSERVER'", "'TABLE_NAMES'",
		"'TIMESTAMP'", "'TRACE'", "'TRUE'", "'TYPE'", "'TYPES'", "'VALUES'",
		"'WHERE'", "'WITH'", "'WITHIN'", "'USING'", "'USE'", "'SECOND'", "'MINUTE'",
		"'HOUR'", "'DAY'", "'MONTH'", "'YEAR'", "'='", "", "'<'", "'<='", "'>'",
		"'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=~'", "'!~'", "'!'", "'.'",
		"'('", "')'", "'['", "']'", "','", "'@'", "';'",
	}
	staticData.SymbolicNames = []string{
		"", "SIMPLE_COMMENT", "BRACKETED_COMMENT", "WS", "ALL", "APP", "ALIVE",
		"AND", "ANALYZE", "AS", "ASC", "BETWEEN", "BEGIN", "BROKER", "BROKERS",
		"BY", "COMPACT", "CREATE", "CROSS", "COLUMNS", "DATABASE", "DATABASES",
		"DEFAULT", "DESC", "DISTRIBUTED", "DROP", "END", "ENGINE", "ESCAPE",
		"EXPLAIN", "EXISTS", "FALSE", "FIELDS", "FLUSH", "FROM", "GROUP", "HAVING",
		"IF", "IN", "INSERT", "INTO", "INTERVAL", "IS", "JOB", "JOIN", "KEYS",
		"LEFT", "LIKE", "LIMIT", "LOG", "LOGICAL", "MASTER", "MEMORY_DATABASES",
		"METRICS", "METRIC", "METADATA", "METADATAS", "NAMESPACE", "NAMESPACES",
		"NULL", "NOT", "NOW", "ON", "OR", "ORDER", "REQUESTS", "REPLICATIONS",
		"RIGHT", "ROLLUP", "SELECT", "SINK", "SHOW", "STATE", "STORAGE", "STREAMING",
		"OBSERVER", "TABLE_NAMES", "TIMESTAMP", "TRACE", "TRUE", "TYPE", "TYPES",
		"VALUES", "WHERE", "WITH", "WITHIN", "USING", "USE", "SECOND", "MINUTE",
		"HOUR", "DAY", "MONTH", "YEAR", "EQ", "NEQ", "LT", "LTE", "GT", "GTE",
		"PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", "REGEXP", "NEQREGEXP",
		"EXCLAMATION_SYMBOL", "DOT", "LR_BRACKET", "RR_BRACKET", "LS_QUARE",
		"RS_QUARE", "COMMA", "AT", "SEMICOLON", "STRING", "INTEGER_VALUE", "DECIMAL_VALUE",
		"DOUBLE_VALUE", "IDENTIFIER", "DIGIT_IDENTIFIER", "QUOTED_IDENTIFIER",
		"BACKQUOTED_IDENTIFIER",
	}
	staticData.RuleNames = []string{
		"statement", "streamingDDLStement", "dropStreamingJob", "createStreamingJob",
		"streamingApp", "streamingStatement", "streamingQuery", "ddlStatement",
		"dmlStatement", "adminStatement", "utilityStatement", "explainOption",
		"createStreaming", "createStreamingOptions", "createStreamingOption",
		"createDatabase", "createSink", "databaseOptions", "createDatabaseOptions",
		"rollupOptions", "dropDatabase", "createBroker", "flushDatabase", "compactDatabase",
		"showStatement", "useStatement", "query", "with", "namedQuery", "queryNoWith",
		"queryTerm", "queryPrimary", "querySpecification", "selectItem", "relation",
		"joinType", "joinCriteria", "aliasedRelation", "relationPrimary", "groupBy",
		"groupingElement", "groupingSet", "having", "orderBy", "sortItem", "limitRowCount",
		"expression", "booleanExpression", "valueExpression", "primaryExpression",
		"predicate", "comparisonOperator", "qualifiedName", "columnAliases",
		"appAnnotation", "annotation", "annotation_element", "properties", "propertyAssignments",
		"property", "propertyValue", "booleanValue", "string", "identifier",
		"number", "interval", "intervalUnit", "nonReserved",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLParserInit initializes any static state used to implement SQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLParserInit() {
	staticData := &SQLParserParserStaticData
	staticData.once.Do(sqlparserParserInit)
}

// NewSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLParser(input antlr.TokenStream) *SQLParser {
	SQLParserInit()
	this := new(SQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SQLParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SQLParser.g4"

	return this
}

// SQLParser tokens.
const (
	SQLParserEOF                   = antlr.TokenEOF
	SQLParserSIMPLE_COMMENT        = 1
	SQLParserBRACKETED_COMMENT     = 2
	SQLParserWS                    = 3
	SQLParserALL                   = 4
	SQLParserAPP                   = 5
	SQLParserALIVE                 = 6
	SQLParserAND                   = 7
	SQLParserANALYZE               = 8
	SQLParserAS                    = 9
	SQLParserASC                   = 10
	SQLParserBETWEEN               = 11
	SQLParserBEGIN                 = 12
	SQLParserBROKER                = 13
	SQLParserBROKERS               = 14
	SQLParserBY                    = 15
	SQLParserCOMPACT               = 16
	SQLParserCREATE                = 17
	SQLParserCROSS                 = 18
	SQLParserCOLUMNS               = 19
	SQLParserDATABASE              = 20
	SQLParserDATABASES             = 21
	SQLParserDEFAULT               = 22
	SQLParserDESC                  = 23
	SQLParserDISTRIBUTED           = 24
	SQLParserDROP                  = 25
	SQLParserEND                   = 26
	SQLParserENGINE                = 27
	SQLParserESCAPE                = 28
	SQLParserEXPLAIN               = 29
	SQLParserEXISTS                = 30
	SQLParserFALSE                 = 31
	SQLParserFIELDS                = 32
	SQLParserFLUSH                 = 33
	SQLParserFROM                  = 34
	SQLParserGROUP                 = 35
	SQLParserHAVING                = 36
	SQLParserIF                    = 37
	SQLParserIN                    = 38
	SQLParserINSERT                = 39
	SQLParserINTO                  = 40
	SQLParserINTERVAL              = 41
	SQLParserIS                    = 42
	SQLParserJOB                   = 43
	SQLParserJOIN                  = 44
	SQLParserKEYS                  = 45
	SQLParserLEFT                  = 46
	SQLParserLIKE                  = 47
	SQLParserLIMIT                 = 48
	SQLParserLOG                   = 49
	SQLParserLOGICAL               = 50
	SQLParserMASTER                = 51
	SQLParserMEMORY_DATABASES      = 52
	SQLParserMETRICS               = 53
	SQLParserMETRIC                = 54
	SQLParserMETADATA              = 55
	SQLParserMETADATAS             = 56
	SQLParserNAMESPACE             = 57
	SQLParserNAMESPACES            = 58
	SQLParserNULL                  = 59
	SQLParserNOT                   = 60
	SQLParserNOW                   = 61
	SQLParserON                    = 62
	SQLParserOR                    = 63
	SQLParserORDER                 = 64
	SQLParserREQUESTS              = 65
	SQLParserREPLICATIONS          = 66
	SQLParserRIGHT                 = 67
	SQLParserROLLUP                = 68
	SQLParserSELECT                = 69
	SQLParserSINK                  = 70
	SQLParserSHOW                  = 71
	SQLParserSTATE                 = 72
	SQLParserSTORAGE               = 73
	SQLParserSTREAMING             = 74
	SQLParserOBSERVER              = 75
	SQLParserTABLE_NAMES           = 76
	SQLParserTIMESTAMP             = 77
	SQLParserTRACE                 = 78
	SQLParserTRUE                  = 79
	SQLParserTYPE                  = 80
	SQLParserTYPES                 = 81
	SQLParserVALUES                = 82
	SQLParserWHERE                 = 83
	SQLParserWITH                  = 84
	SQLParserWITHIN                = 85
	SQLParserUSING                 = 86
	SQLParserUSE                   = 87
	SQLParserSECOND                = 88
	SQLParserMINUTE                = 89
	SQLParserHOUR                  = 90
	SQLParserDAY                   = 91
	SQLParserMONTH                 = 92
	SQLParserYEAR                  = 93
	SQLParserEQ                    = 94
	SQLParserNEQ                   = 95
	SQLParserLT                    = 96
	SQLParserLTE                   = 97
	SQLParserGT                    = 98
	SQLParserGTE                   = 99
	SQLParserPLUS                  = 100
	SQLParserMINUS                 = 101
	SQLParserASTERISK              = 102
	SQLParserSLASH                 = 103
	SQLParserPERCENT               = 104
	SQLParserREGEXP                = 105
	SQLParserNEQREGEXP             = 106
	SQLParserEXCLAMATION_SYMBOL    = 107
	SQLParserDOT                   = 108
	SQLParserLR_BRACKET            = 109
	SQLParserRR_BRACKET            = 110
	SQLParserLS_QUARE              = 111
	SQLParserRS_QUARE              = 112
	SQLParserCOMMA                 = 113
	SQLParserAT                    = 114
	SQLParserSEMICOLON             = 115
	SQLParserSTRING                = 116
	SQLParserINTEGER_VALUE         = 117
	SQLParserDECIMAL_VALUE         = 118
	SQLParserDOUBLE_VALUE          = 119
	SQLParserIDENTIFIER            = 120
	SQLParserDIGIT_IDENTIFIER      = 121
	SQLParserQUOTED_IDENTIFIER     = 122
	SQLParserBACKQUOTED_IDENTIFIER = 123
)

// SQLParser rules.
const (
	SQLParserRULE_statement              = 0
	SQLParserRULE_streamingDDLStement    = 1
	SQLParserRULE_dropStreamingJob       = 2
	SQLParserRULE_createStreamingJob     = 3
	SQLParserRULE_streamingApp           = 4
	SQLParserRULE_streamingStatement     = 5
	SQLParserRULE_streamingQuery         = 6
	SQLParserRULE_ddlStatement           = 7
	SQLParserRULE_dmlStatement           = 8
	SQLParserRULE_adminStatement         = 9
	SQLParserRULE_utilityStatement       = 10
	SQLParserRULE_explainOption          = 11
	SQLParserRULE_createStreaming        = 12
	SQLParserRULE_createStreamingOptions = 13
	SQLParserRULE_createStreamingOption  = 14
	SQLParserRULE_createDatabase         = 15
	SQLParserRULE_createSink             = 16
	SQLParserRULE_databaseOptions        = 17
	SQLParserRULE_createDatabaseOptions  = 18
	SQLParserRULE_rollupOptions          = 19
	SQLParserRULE_dropDatabase           = 20
	SQLParserRULE_createBroker           = 21
	SQLParserRULE_flushDatabase          = 22
	SQLParserRULE_compactDatabase        = 23
	SQLParserRULE_showStatement          = 24
	SQLParserRULE_useStatement           = 25
	SQLParserRULE_query                  = 26
	SQLParserRULE_with                   = 27
	SQLParserRULE_namedQuery             = 28
	SQLParserRULE_queryNoWith            = 29
	SQLParserRULE_queryTerm              = 30
	SQLParserRULE_queryPrimary           = 31
	SQLParserRULE_querySpecification     = 32
	SQLParserRULE_selectItem             = 33
	SQLParserRULE_relation               = 34
	SQLParserRULE_joinType               = 35
	SQLParserRULE_joinCriteria           = 36
	SQLParserRULE_aliasedRelation        = 37
	SQLParserRULE_relationPrimary        = 38
	SQLParserRULE_groupBy                = 39
	SQLParserRULE_groupingElement        = 40
	SQLParserRULE_groupingSet            = 41
	SQLParserRULE_having                 = 42
	SQLParserRULE_orderBy                = 43
	SQLParserRULE_sortItem               = 44
	SQLParserRULE_limitRowCount          = 45
	SQLParserRULE_expression             = 46
	SQLParserRULE_booleanExpression      = 47
	SQLParserRULE_valueExpression        = 48
	SQLParserRULE_primaryExpression      = 49
	SQLParserRULE_predicate              = 50
	SQLParserRULE_comparisonOperator     = 51
	SQLParserRULE_qualifiedName          = 52
	SQLParserRULE_columnAliases          = 53
	SQLParserRULE_appAnnotation          = 54
	SQLParserRULE_annotation             = 55
	SQLParserRULE_annotation_element     = 56
	SQLParserRULE_properties             = 57
	SQLParserRULE_propertyAssignments    = 58
	SQLParserRULE_property               = 59
	SQLParserRULE_propertyValue          = 60
	SQLParserRULE_booleanValue           = 61
	SQLParserRULE_string                 = 62
	SQLParserRULE_identifier             = 63
	SQLParserRULE_number                 = 64
	SQLParserRULE_interval               = 65
	SQLParserRULE_intervalUnit           = 66
	SQLParserRULE_nonReserved            = 67
)

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DdlStatement() IDdlStatementContext
	DmlStatement() IDmlStatementContext
	AdminStatement() IAdminStatementContext
	UtilityStatement() IUtilityStatementContext
	StreamingDDLStement() IStreamingDDLStementContext
	StreamingApp() IStreamingAppContext
	EOF() antlr.TerminalNode

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) DdlStatement() IDdlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDdlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDdlStatementContext)
}

func (s *StatementContext) DmlStatement() IDmlStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDmlStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDmlStatementContext)
}

func (s *StatementContext) AdminStatement() IAdminStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAdminStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAdminStatementContext)
}

func (s *StatementContext) UtilityStatement() IUtilityStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUtilityStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUtilityStatementContext)
}

func (s *StatementContext) StreamingDDLStement() IStreamingDDLStementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStreamingDDLStementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStreamingDDLStementContext)
}

func (s *StatementContext) StreamingApp() IStreamingAppContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStreamingAppContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStreamingAppContext)
}

func (s *StatementContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLParserEOF, 0)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (s *StatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLParserVisitor:
		return t.VisitStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLParserRULE_statement)
	p.SetState(144)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(136)
			p.DdlStatement()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(137)
			p.DmlStatement()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(138)
			p.AdminStatement()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(139)
			p.UtilityStatement()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(140)
			p.StreamingDDLStement()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(141)
			p.StreamingApp()
		}
		{
			p.SetState(142)
			p.Match(SQLParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStreamingDDLStementContext is an interface to support dynamic dispatch.
type IStreamingDDLStementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CreateStreamingJob() ICreateStreamingJobContext
	DropStreamingJob() IDropStreamingJobContext

	// IsStreamingDDLStementContext differentiates from other interfaces.
	IsStreamingDDLStementContext()
}

type StreamingDDLStementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStreamingDDLStementContext() *StreamingDDLStementContext {
	var p = new(StreamingDDLStementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_streamingDDLStement
	return p
}

func InitEmptyStreamingDDLStementContext(p *StreamingDDLStementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLParserRULE_streamingDDLStement
}

func (*StreamingDDLStementContext) IsStreamingDDLStementContext() {}

func NewStreamingDDLStementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StreamingDDLStementContext {
	var p = new(StreamingDDLStementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLParserRULE_streamingDDLStement

	return p
}

func (s *StreamingDDLStementContext) GetParser() antlr.Parser { return s.parser }

func (s *StreamingDDLStementContext) CreateStreamingJob() ICreateStreamingJobContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateStreamingJobContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateStreamingJobContext)
}
